VTN-8305 - these styles were preventing the spans from wrapping correctly

--- a/packages/veritone-react-common/src/components/TranscriptEngineOutput/TranscriptFragment/OverviewFragment/styles.scss
+++ b/packages/veritone-react-common/src/components/TranscriptEngineOutput/TranscriptFragment/OverviewFragment/styles.scss
@@ -8,7 +8,6 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 300;
-  float: left;
 
   &:hover {
     color: $blue-1;
