--- a/packages/veritone-react-common/src/components/TranscriptEngineOutput/TranscriptSegment/SnippetSegment/styles.scss
+++ b/packages/veritone-react-common/src/components/TranscriptEngineOutput/TranscriptSegment/SnippetSegment/styles.scss
@@ -19,7 +19,6 @@
     padding: 20px 0;
 
     .fragment {
-      float: left;
       margin-right: 1ex;
     }
   }
